--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "dependencies": {
     "coffee-script": "1.6.2",
-    "handlebars": "~1.3.0",
-    "ember-template-compiler": "~1.5.1"
+    "handlebars": "^2.0.0",
+    "ember-template-compiler": "1.9.0-alpha"
   },
   "devDependencies": {
     "mocha": "1.9.0",
